less
In file included from intersect_gameobjects.h:11,
                 from physics.h:6,
                 from main.h:14,
                 from main.c:1:
gameobjects.h:28:2: error: unknown type name ‘projectile’
  projectile proj;
  ^~~~~~~~~~
In file included from physics.h:6,
                 from main.h:14,
                 from main.c:1:
intersect_gameobjects.h:39:2: error: unknown type name ‘projectile’
  projectile *points;
  ^~~~~~~~~~
In file included from main.h:14,
                 from main.c:1:
main.c: In function ‘init_level’:
physics.h:19:30: error: incompatible types when initializing type ‘int’ using type ‘projectile’ {aka ‘struct <anonymous>’}
 #define PROJECTILE_PROTOTYPE (projectile){ \
                              ^
gameobjects.h:34:8: note: in expansion of macro ‘PROJECTILE_PROTOTYPE’
  .proj=PROJECTILE_PROTOTYPE, \
        ^~~~~~~~~~~~~~~~~~~~
main.c:13:21: note: in expansion of macro ‘E_PLAYER_PROTOTYPE’
  leveldata.player = E_PLAYER_PROTOTYPE;
                     ^~~~~~~~~~~~~~~~~~
main.c:16:23: error: request for member ‘reset_start’ in something not a structure or union
  leveldata.player.proj.reset_start = 1;
                       ^
main.c:17:23: error: request for member ‘is_dynamic’ in something not a structure or union
  leveldata.player.proj.is_dynamic = 1;
                       ^
main.c:18:23: error: request for member ‘pos0’ in something not a structure or union
  leveldata.player.proj.pos0 = half_up;
                       ^
main.c:19:23: error: request for member ‘pos’ in something not a structure or union
  leveldata.player.proj.pos  = half_up;
                       ^
main.c:20:23: error: request for member ‘vel0’ in something not a structure or union
  leveldata.player.proj.vel0 = ZERO_VECTOR;
                       ^
main.c:21:23: error: request for member ‘vel’ in something not a structure or union
  leveldata.player.proj.vel  = ZERO_VECTOR;
                       ^
main.c: In function ‘update’:
main.c:155:28: error: request for member ‘reset_start’ in something not a structure or union
    if(leveldata.player.proj.reset_start) {
                            ^
main.c:156:26: error: request for member ‘start_time’ in something not a structure or union
     leveldata.player.proj.start_time = g.time;
                          ^
main.c:157:26: error: request for member ‘pos0’ in something not a structure or union
     leveldata.player.proj.pos0 = leveldata.player.proj.pos;
                          ^
main.c:157:55: error: request for member ‘pos’ in something not a structure or union
     leveldata.player.proj.pos0 = leveldata.player.proj.pos;
                                                       ^
main.c:158:26: error: request for member ‘vel0’ in something not a structure or union
     leveldata.player.proj.vel0 = leveldata.player.proj.vel;
                          ^
main.c:158:55: error: request for member ‘vel’ in something not a structure or union
     leveldata.player.proj.vel0 = leveldata.player.proj.vel;
                                                       ^
main.c:159:26: error: request for member ‘reset_start’ in something not a structure or union
     leveldata.player.proj.reset_start = 0;
                          ^
main.c:161:36: warning: passing argument 1 of ‘updateProjectileStateAnalytical’ from incompatible pointer type [-Wincompatible-pointer-types]
    updateProjectileStateAnalytical(&leveldata.player.proj, g.time);
                                    ^~~~~~~~~~~~~~~~~~~~~~
In file included from main.h:14,
                 from main.c:1:
physics.h:37:50: note: expected ‘projectile *’ {aka ‘struct <anonymous> *’} but argument is of type ‘int *’
 void updateProjectileStateAnalytical(projectile *p, float time);
                                      ~~~~~~~~~~~~^
main.c:163:35: warning: passing argument 1 of ‘updateProjectileStateNumerical’ from incompatible pointer type [-Wincompatible-pointer-types]
    updateProjectileStateNumerical(&leveldata.player.proj, g.dt);
                                   ^~~~~~~~~~~~~~~~~~~~~~
In file included from main.h:14,
                 from main.c:1:
physics.h:46:49: note: expected ‘projectile *’ {aka ‘struct <anonymous> *’} but argument is of type ‘int *’
 void updateProjectileStateNumerical(projectile *p, float dt);
                                     ~~~~~~~~~~~~^
main.c:166:35: warning: passing argument 1 of ‘updateProjectileStateNumerical’ from incompatible pointer type [-Wincompatible-pointer-types]
    updateProjectileStateNumerical(&leveldata.player.proj, g.dt);
                                   ^~~~~~~~~~~~~~~~~~~~~~
In file included from main.h:14,
                 from main.c:1:
physics.h:46:49: note: expected ‘projectile *’ {aka ‘struct <anonymous> *’} but argument is of type ‘int *’
 void updateProjectileStateNumerical(projectile *p, float dt);
                                     ~~~~~~~~~~~~^
main.c:168:52: error: request for member ‘pos’ in something not a structure or union
   leveldata.player.bounds.c = leveldata.player.proj.pos;
                                                    ^
main.c:171:2: error: expected identifier before ‘}’ token
  }
  ^
main.c: In function ‘display’:
main.c:208:34: error: request for member ‘pos’ in something not a structure or union
  glVertex3f(leveldata.player.proj.pos.x, leveldata.player.proj.pos.y, leveldata.player.proj.pos.z);
                                  ^
main.c:208:63: error: request for member ‘pos’ in something not a structure or union
  glVertex3f(leveldata.player.proj.pos.x, leveldata.player.proj.pos.y, leveldata.player.proj.pos.z);
                                                               ^
main.c:208:92: error: request for member ‘pos’ in something not a structure or union
  glVertex3f(leveldata.player.proj.pos.x, leveldata.player.proj.pos.y, leveldata.player.proj.pos.z);
                                                                                            ^
main.c:214:52: error: request for member ‘pos’ in something not a structure or union
  circle pj = {.r=0.05, .c={.x=leveldata.player.proj.pos.x, .y=leveldata.player.proj.pos.y, .z=leveldata.player.proj.pos.z}};
                                                    ^
main.c:214:84: error: request for member ‘pos’ in something not a structure or union
  circle pj = {.r=0.05, .c={.x=leveldata.player.proj.pos.x, .y=leveldata.player.proj.pos.y, .z=leveldata.player.proj.pos.z}};
                                                                                    ^
main.c:214:116: error: request for member ‘pos’ in something not a structure or union
  circle pj = {.r=0.05, .c={.x=leveldata.player.proj.pos.x, .y=leveldata.player.proj.pos.y, .z=leveldata.player.proj.pos.z}};
                                                                                                                    ^
main.c: In function ‘keyboard’:
main.c:365:25: error: request for member ‘vel’ in something not a structure or union
    leveldata.player.proj.vel.y = 0.2;
                         ^
main.c:366:25: error: request for member ‘reset_start’ in something not a structure or union
    leveldata.player.proj.reset_start = (char)1;
                         ^
main.c:369:25: error: request for member ‘vel’ in something not a structure or union
    leveldata.player.proj.vel.x -= 0.05;
                         ^
main.c:370:25: error: request for member ‘reset_start’ in something not a structure or union
    leveldata.player.proj.reset_start = (char)1;
                         ^
main.c:373:25: error: request for member ‘vel’ in something not a structure or union
    leveldata.player.proj.vel.x += 0.05;
                         ^
main.c:374:25: error: request for member ‘reset_start’ in something not a structure or union
    leveldata.player.proj.reset_start = (char)1;
                         ^
main.c:378:25: error: request for member ‘reset_start’ in something not a structure or union
    leveldata.player.proj.reset_start = (char)1;
                         ^
make: *** [makefile:15: main.o] Error 1
